@@ -172,6 +172,17 @@ namespace libtorrent {
 			}
 		}
 
+		if (!tracker_req().ipv4.empty() && !i2p)
+		{
+			for (auto const& v4 : tracker_req().ipv4)
+			{
+				error_code err;
+				std::string const ip = v4.to_string(err);
+				if (err) continue;
+				url += "&ipv4=";
+				url += escape_string(ip);
+			}
+		}
 		if (!tracker_req().ipv6.empty() && !i2p)
 		{
 			for (auto const& v6 : tracker_req().ipv6)
